# nvcurve

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/CurveEditor/: CurveEditor.tsx  CurveToolbar.tsx  CurveTooltip.tsx
frontend/src/components/Limits/: PerformancePanel.tsx
frontend/src/components/Monitor/: GaugeCard.tsx  LiveMonitor.tsx  PerformanceMonitor.tsx  StatusBar.tsx
frontend/src/components/PointTable/: PointRow.tsx  PointTable.tsx
frontend/src/components/Profiles/: ProfilePanel.tsx
frontend/src/components/common/: ConfirmDialog.tsx
frontend/src/hooks/: useCurve.ts  useGpu.ts  useMonitor.ts
frontend/src/store/: curveStore.ts
frontend/src/utils/: curveHelpers.ts  units.ts
nvcurve/: __init__.py  __main__.py  cli.py  client.py  config.py  safety.py  server.py
nvcurve/hal/: __init__.py  gpu.py  limits.py  monitoring.py  ranges.py  snapshot.py  vfcurve.py
nvcurve/nvapi/: __init__.py  bootstrap.py  constants.py  errors.py  types.py
nvcurve/profiles/: __init__.py  native.py
scripts/: nv_vfcurve_rw.py
