[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvcurve"
version = "0.1.8"
description = "Linux GPU V/F curve editor for NVIDIA GPUs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "nvidia-ml-py>=12.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
nvcurve = "nvcurve.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nvcurve"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "nvcurve/frontend/dist"

[tool.hatch.build.targets.sdist]
include = [
    "/nvcurve",
    "/frontend/dist",
    "/README.md",
]
